--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
         </div>
         <div class="half-width"> <img src="image/pagla.png" alt=""> </div>
     </section>
+    <section class="Dream-big">
+        <div class="half-width">
+            <img src="image/ahsan1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream-big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website.
+                I can even teach my grandma how to make simple website.
+                My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="Link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
